--- a/app/views/course/from-ucas.html
+++ b/app/views/course/from-ucas.html
@@ -6,14 +6,10 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/courses">Courses</a></li>
-      <li><a href="/course/{{ accrediting.slug }}/{{ subject.slug or '/maths' }}">{{ subject.name or 'Maths' }} – {{ accrediting.name }}</a></li>
-    </ol>
-  </div>
+  <a href="/course/{{ accrediting.slug }}/{{ subject.slug }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
+    <span class="heading-secondary">{{ subject.name }}</span>
     {{ ucasCourse.options }} ({{ ucasCourse.programmeCode }})
   </h1>
 
