--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -5,15 +5,10 @@
 
 <main id="content" role="main">
   {% include "includes/phase_banner_beta.html" %}
-  <div class="breadcrumbs">
-    <ol>
-      <li><a href="/courses">Courses</a></li>
-      <li><a href="/course/{{ accrediting.slug }}/{{ subject.slug or '/maths' }}">{{ subject.name or 'Maths' }} – {{ accrediting.name }}</a></li>
-    </ol>
-  </div>
+  <a href="/course/{{ accrediting.slug }}/{{ subject.slug }}" class="link-back">Back</a>
 
   <h1 class="heading-xlarge">
-    Course requirements
+    Requirements and eligibility
   </h1>
 
   <div class="grid-row">
