Update design history

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,10 +18,17 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/iteration-june-26">Iteration 26 June 2018</a>
+      </h3>
+      <p>
+        Separate courses by accrediting provider. Provide explicit fields for each course offered.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/read-only">Draft of a read only version</a>
       </h3>
       <p>
-        An initial pass at what a read only view of the service will look like.
+        An initial pass at what a read only view of the service could have looked like.
       </p>
 
       <h3 class="heading-small">
