Preserve whitespace in preview

--- a/app/assets/sass/print.scss
+++ b/app/assets/sass/print.scss
@@ -2,6 +2,11 @@
   display: none;
 }
 
+.preview-pre {
+  white-space: pre-wrap;
+  font-family: sans-serif;
+}
+
 .design-history-text {
   display: none;
 }
