Add character counts
From https://github.com/alphagov/ds-character-count

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -11,6 +11,7 @@ $path: "/public/images/";
 @import 'patterns/task-list';
 @import 'patterns/course-parts';
 @import 'patterns/success-summary';
+@import 'patterns/character-counts';
 
 // Related items
 // (These styles will be moved to GOV.UK elements, duplicating here for now.)
