--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -6,6 +6,7 @@
 <script src="/public/javascripts/govuk/show-hide-content.js"></script>
 <script src="/public/javascripts/govuk/modules.js"></script>
 <script src="/public/javascripts/modules/edge.js"></script>
+<script src="/public/javascripts/character-counts.js"></script>
 <script src="/public/javascripts/application.js"></script>
 
 {% if useAutoStoreData %}
