--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -14,9 +14,9 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form action="/course/{{ accrediting.slug }}/{{ subject.slug }}" method="post">
-        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-qualifications-required', 'Qualifications needed', 4, 'The minimum academic qualifications required for this course.') }}
-        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-personal-qualities', 'Personal qualities (optional)', 4, 'Any specific qualities you look for in a candidate. For example, confidence in talking to large groups.') }}
-        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-other-requirements', 'Other requirements (optional)', 4, 'Non-academic requirements, eg DBS checks or work experience, if relevant.') }}
+        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-qualifications-required', 'Qualifications needed', 4, 'The minimum academic qualifications required for this course.', 250) }}
+        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-personal-qualities', 'Personal qualities (optional)', 4, 'Any specific qualities you look for in a candidate. For example, confidence in talking to large groups.', 250) }}
+        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-other-requirements', 'Other requirements (optional)', 4, 'Non-academic requirements, eg DBS checks or work experience, if relevant.', 250) }}
 
         <div class="add-double-bottom-margin">
           <input type="submit" class="button" value="Save" />
