Tweak about this org fields

--- a/app/views/course/about-this-provider.html
+++ b/app/views/course/about-this-provider.html
@@ -23,7 +23,7 @@
           <li>advantages of you as a training provider (please include evidence)</li>
           <li>benefits of your chosen accredited provider</li>
         </ul>
-        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-about-organisation', 'About the courses you offer', 14, '', 250) }}
+        {{ macros.textarea(subject.slug + '-' + accrediting.slug + '-about-organisation', 'About your organisation', 14, '', 250) }}
       </div>
     </div>
 
