--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -46,13 +46,13 @@
         </ul>
 
         <h2 class="heading-large" id="section-about-provider">About the training provider</h2>
-
-        <h3 class="heading-medium">Training with {{ data['training-provider-name'] }}</h3>
         {{ macros.previewPart(subject.slug + '-' + accrediting.slug + '-about-organisation') }}
 
         {% if not accrediting.selfAccrediting %}
-          <h3 class="heading-medium">About the accrediting provider</h3>
-          {{ macros.previewPart(subject.slug + '-' + accrediting.slug + '-about-accrediting-provider') }}
+          {% if data[subject.slug + '-' + accrediting.slug + '-about-accrediting-provider'] %}
+            <h3 class="heading-medium">About the accrediting provider</h3>
+            {{ macros.previewPart(subject.slug + '-' + accrediting.slug + '-about-accrediting-provider') }}
+          {% endif %}
         {% endif %}
 
         <h3 class="heading-medium">Training with a disability</h3>
