--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/check-ucas-data">Check your UCAS data (Initial launch)</a>
+      </h3>
+      <p>
+        A read-only version of the tool where users can validate their imported courses and request access for users.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/iteration-june-26">Iteration 26 June 2018</a>
       </h3>
       <p>
