--- a/app/views/history/check-ucas-data/index.html
+++ b/app/views/history/check-ucas-data/index.html
@@ -16,7 +16,7 @@
       <p>When onboarding users to the publish courses tool, to begin with they’ll only have access to the data we've imported from UCAS.</p>
       <p>Users need to check their courses are there and showing correctly to validate our import. If there are problems we need users to report them to us.</p>
       <p>Providers need access for multiple users, we’re creating a secure mechanism to request access for these users.</p>
-      <p>See branch `<a href="https://github.com/fofr/manage-courses-prototype/tree/check-ucas">check-ucas</a>` on Github.</p>
+      <p>See <a href="https://publish-courses-check-ucas.herokuapp.com/we-imported">prototype on Heroku</a> or the <a href="#"></a>branch `<a href="https://github.com/fofr/manage-courses-prototype/tree/check-ucas">check-ucas</a>` on Github.</p>
     </div>
   </div>
 
