Comment on 1 page per UCAS course

--- a/app/views/history/check-ucas-data/index.html
+++ b/app/views/history/check-ucas-data/index.html
@@ -34,7 +34,9 @@
     <p>This form may instead be a Google Form to begin with.</p>
   ') }}
 
-  {{ macros.screenshot('View course', 'view-course', '/public/images/history/check-ucas-data/thumbnails/04-view-course.png', '/public/images/history/check-ucas-data/04-view-course.png', '') }}
+  {{ macros.screenshot('View course', 'view-course', '/public/images/history/check-ucas-data/thumbnails/04-view-course.png', '/public/images/history/check-ucas-data/04-view-course.png', '
+    <p>In user research we found that having <a href="/history/school-direct-view#course-details-from-ucas">multiple sets of UCAS course information on one page</a> and deep linking to them was confusing. This design splits them out into a single page per course.</p>
+  ') }}
 
 </main>
 {% endblock %}
