Tweak design detail for requesting access

--- a/app/views/history/check-ucas-data/index.html
+++ b/app/views/history/check-ucas-data/index.html
@@ -31,7 +31,8 @@
   {{ macros.screenshot('Courses by accrediting provider', 'courses-by-accrediting-provider', '/public/images/history/check-ucas-data/thumbnails/01-courses-by-accrediting-provider.png', '/public/images/history/check-ucas-data/01-courses-by-accrediting-provider.png', '') }}
 
   {{ macros.screenshot('Request access for someone', 'request-access', '/public/images/history/check-ucas-data/thumbnails/03-request-access.png', '/public/images/history/check-ucas-data/03-request-access.png', '
-    <p>This form may instead be a Google Form to begin with.</p>
+    <p>This will be a Google Form to begin with.</p>
+    <p>We used first name and last name as that’s a requirement of DFE Sign-in.</p>
   ') }}
 
   {{ macros.screenshot('View course', 'view-course', '/public/images/history/check-ucas-data/thumbnails/04-view-course.png', '/public/images/history/check-ucas-data/04-view-course.png', '
