Document June 28 iteration

--- a/app/views/history/iteration-june-26/index.html
+++ b/app/views/history/iteration-june-26/index.html
@@ -17,6 +17,8 @@
       <p>Following <a href="/history/school-direct-view">user research with providers</a>, it was found that the “About this course” field was confusing when it could potentially apply to different course variants.</p>
 
       <p>Where there are different accrediting providers, those providers have a significant impact on the course and how it should be presented to applicants. Courses with different accrediting providers must not be folded into each other.</p>
+
+      <p>We set up 6 unmoderated research sessions with providers where we asked them to complete a single course listing. One user completed this task before we made some <a href="/history/iteration-june-28">small iterations</a> to this design: <a href="https://docs.google.com/document/d/19zLJb1fplLHmrxZ2VlPsWCfdhqfK0DuoyKjCog8eeAE/edit?usp=sharing">completed course listing</a></p>
     </div>
   </div>
 
@@ -26,7 +28,9 @@
 
   {{ macros.screenshot('Course details from ucas', 'course-details-from-ucas', '/public/images/history/iteration-june-26/thumbnails/03-course-details-from-ucas.png', '/public/images/history/iteration-june-26/03-course-details-from-ucas.png', '') }}
 
-  {{ macros.screenshot('PGCE with QTS course option', 'PGCE with QTS course option', '/public/images/history/iteration-june-26/thumbnails/04-PGCE with QTS course option.png', '/public/images/history/iteration-june-26/04-PGCE with QTS course option.png', '') }}
+  {{ macros.screenshot('PGCE with QTS course option', 'PGCE with QTS course option', '/public/images/history/iteration-june-26/thumbnails/04-PGCE with QTS course option.png', '/public/images/history/iteration-june-26/04-PGCE with QTS course option.png', '
+    <p>In large text boxes it is not clear what formatting, if any, a user can put in. We’ve seen users assume that paragraphs and lists are accepted.</p>
+  ') }}
 
   {{ macros.screenshot('QTS with salary course option', 'QTS with salary course option', '/public/images/history/iteration-june-26/thumbnails/05-QTS with salary course option.png', '/public/images/history/iteration-june-26/05-QTS with salary course option.png', '') }}
 
