--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -25,6 +25,13 @@
       </p>
 
       <h3 class="heading-small">
+        <a href="/history/iteration-june-28">Iteration 28 June 2018</a>
+      </h3>
+      <p>
+        Add character counts and refine preview.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/iteration-june-26">Iteration 26 June 2018</a>
       </h3>
       <p>
