--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -7,25 +7,37 @@
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs"></div>
 
-  <h1 class="heading-xlarge">
-    <span class="heading-secondary">{{ data['training-provider-name'] }}</span>
-    {% if data['accreditors'][0]['name'] == data['training-provider-name'] %}
-      Courses
-    {% else %}
-      Courses by accrediting provider
-    {% endif %}
-  </h1>
+  {% if showMessage %}
+  <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
+    <h3 class="heading-medium success-summary-heading" id="success-summary-heading-example-1">
+      DfE has received your request to give access to {{ data['request-first-name']}} {{ data['request-last-name'] }}.
+    </h3>
+    <p>
+      They will receive sign-up instructions if their account is approved.
+    </p>
+    <p><a href="/request-access">Request access for someone else</a></p>
+  </div>
+  {% endif %}
 
-  <div class="grid-row add-double-bottom-margin">
+  <div class="grid-row">
     <div class="column-two-thirds">
-      <p class="lede">Multiple UCAS courses for the same subject are combined into a single subject page. For example, courses with and without a salary.</p>
+      <h1 class="heading-xlarge">
+        {{ data['training-provider-name'] }}
+      </h1>
+
+      <h2 class="heading-large">Request access for someone</h2>
+      <p>You can <a href="/request-access">request a DfE Sign-in account</a> for others who manage your courses.</p>
     </div>
   </div>
+
+  <h2 class="heading-large">
+    Courses
+  </h2>
 
   {% for accrediting in data['accreditors'] %}
     {% if data['accreditors'][0]['name'] != data['training-provider-name'] %}
       <h3 class="heading-medium">
-        <!-- <span style="color: #777; font-weight: normal">Accrediting provider</span><br /> -->
+        <span style="color: #777; font-weight: normal">Accrediting provider</span><br />
         {{ accrediting.name }}
       </h3>
     {% endif %}
