--- a/app/views/request-access.html
+++ b/app/views/request-access.html
@@ -22,6 +22,7 @@
         {{ macros.textbox('request-first-name', 'First name') }}
         {{ macros.textbox('request-last-name', 'Last name') }}
         {{ macros.textbox('request-email', 'Email address') }}
+        {{ macros.textbox('request-organisation', 'Their organisation') }}
         {{ macros.textareaBasic('request-reason', 'Reason they need access', 2) }}
         <input type="submit" class="button" value="Request access">
       </form>
