Include link to JIRA ticket

--- a/app/views/history/request-access-iteration-june-29/index.html
+++ b/app/views/history/request-access-iteration-june-29/index.html
@@ -16,6 +16,7 @@
     <div class="column-two-thirds">
       <p>A small iteration on the <a href="/history/check-ucas-data#request-access">initial design</a> adding a form legend, the new user’s organisation and success message.</p>
       <p>We’d like to record whether the new user is part of the same organisation or a different one.</p>
+      <p>More about the request access process on the ticket: <a href="https://dfedigital.atlassian.net/browse/BATSA-384">BATSA-384</a></p>
     </div>
   </div>
 
