--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,6 +18,13 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/multiple-organisations">Managing multiple organisation</a>
+      </h3>
+      <p>
+        Some users will be responsible for courses from multiple organisations. eg SCITT-schools.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/request-access-iteration-june-29">Request access</a>
       </h3>
       <p>
