--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -18,7 +18,7 @@
       <h2 class="heading-large">Manage courses designs</h2>
 
       <h3 class="heading-small">
-        <a href="/history/multiple-organisations">Managing multiple organisation</a>
+        <a href="/history/multiple-organisations">Managing multiple organisations</a>
       </h3>
       <p>
         Some users will be responsible for courses from multiple organisations. eg SCITT-schools.
